sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/QueueDefinition__mdt.object-meta.xml
<CustomObject>
    <description>Defines queue-level defaults for the Apex queue runtime.</description>
    <label>Queue Definition</label>
    <pluralLabel>Queue Definitions</pluralLabel>
</CustomObject>