sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/BatchClaimSize__c.field-meta.xml
<CustomField>
    <fullName>BatchClaimSize__c</fullName>
    <description>Maximum number of due jobs batch.start() may claim for this queue before any execute scopes begin.</description>
    <inlineHelpText>Caps start-time claiming so the worker setup transaction stays within DML row limits.</inlineHelpText>
    <label>Batch Claim Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>