sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/CanceledRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>CanceledRetentionDays__c</fullName>
    <description>Duration days to keep canceled jobs in hot Job__c storage before terminal cleanup can delete them.</description>
    <inlineHelpText>Blank keeps canceled jobs forever; 0 makes them eligible on the next cleanup cycle.</inlineHelpText>
    <label>Canceled Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>