sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/CompletedRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>CompletedRetentionDays__c</fullName>
    <description>Duration days to keep completed jobs in hot Job__c storage before terminal cleanup can delete them.</description>
    <inlineHelpText>Blank keeps completed jobs forever; 0 makes them eligible on the next cleanup cycle.</inlineHelpText>
    <label>Completed Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>