sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/DefaultAttempts__c.field-meta.xml
<CustomField>
    <fullName>DefaultAttempts__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Default max attempts to apply when a job does not override attempts in its options.</description>
    <inlineHelpText>Total attempts allowed for jobs in this queue when not set explicitly.</inlineHelpText>
    <label>Default Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>