sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/DefaultBackoffJitter__c.field-meta.xml
<CustomField>
    <fullName>DefaultBackoffJitter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Default retry backoff jitter ratio used to spread retry eligibility inside the calculated backoff window.</description>
    <inlineHelpText>Default ratio from 0 to 1 used to randomize retry eligibility.</inlineHelpText>
    <label>Default Backoff Jitter</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>