sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/DefaultBackoffType__c.field-meta.xml
<CustomField>
    <fullName>DefaultBackoffType__c</fullName>
    <description>Default retry backoff strategy for jobs that do not provide one explicitly.</description>
    <inlineHelpText>Choose how retry delay is calculated when a job is retried.</inlineHelpText>
    <label>Default Backoff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EXPONENTIAL</fullName>
                <label>Exponential</label>
            </value>
            <value>
                <fullName>FIXED</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>