sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/DefaultBackoffValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultBackoffValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base retry backoff value used with the selected default backoff strategy.</description>
    <inlineHelpText>Base backoff value in minutes used to schedule the next retry.</inlineHelpText>
    <label>Default Backoff Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>