sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/DefaultLeaseMinutes__c.field-meta.xml
<CustomField>
    <fullName>DefaultLeaseMinutes__c</fullName>
    <description>Default lease duration assigned when the batch worker claims a job for execution.</description>
    <inlineHelpText>Lease length in minutes before runtime recovery may treat an active job as stalled.</inlineHelpText>
    <label>Default Lease Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>