sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description of the queue purpose and ownership.</description>
    <inlineHelpText>Describe what this queue is used for and who owns it.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>