sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/FailedRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>FailedRetentionDays__c</fullName>
    <description>Duration days to keep failed jobs in hot Job__c storage before terminal cleanup can delete them.</description>
    <inlineHelpText>Blank keeps failed jobs forever; 0 makes them eligible on the next cleanup cycle.</inlineHelpText>
    <label>Failed Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>