sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the queue definition is available for enqueue, claim, and scheduler operations.</description>
    <inlineHelpText>Controls whether the queue definition is eligible for enqueue, worker dispatch, and scheduler operations.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>