sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/PublishedEventTypes__c.field-meta.xml
<CustomField>
    <fullName>PublishedEventTypes__c</fullName>
    <description>Optional semicolon-separated queue event types published for this queue. Blank disables events; ALL publishes every supported type. Supported values: ACTIVE; COMPLETED; FAILED; CANCELED; STALLED; RECOVERED; SCHEDULER_MATERIALIZED; CLEANED.</description>
    <inlineHelpText>Use blank to disable queue events, ALL for all events, or a semicolon-separated list such as FAILED;CANCELED.</inlineHelpText>
    <label>Published Event Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>