sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Stable queue API name used by queue facades and runtime services.</description>
    <inlineHelpText>Unique queue name, for example invoice-sync.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>