sfdx-source/apex-queue/main/objects/QueueDefinition__mdt/fields/TerminalCleanupPolicy__c.field-meta.xml
<CustomField>
    <fullName>TerminalCleanupPolicy__c</fullName>
    <description>Policy applied by maintenance to terminal jobs after their hot-retention window expires.</description>
    <inlineHelpText>Choose whether terminal jobs are kept or deleted after retention expires.</inlineHelpText>
    <label>Terminal Cleanup Policy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DELETE</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>KEEP</fullName>
                <default>true</default>
                <label>Keep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>